# Webui_framework

./: Install_dependencies.py  README.md  config.ini  initialize_Env.py  pytest.ini  requirements.txt  run.py  token_config.ini  ui_config.ini
ThriftAPI/: CMakeLists.txt  Deploy.thrift  EACP.thrift  EACPLog.thrift  ECMSAgent.thrift  ECMSManager.thrift  ECMSUpgrade.thrift  ECNJY.thrift  EFAST.thrift  EInfoworksLogger.thrift  EKeyScanMonitor.thrift  EOFS.thrift  ESearchMgnt.thrift  EThriftException.thrift  EVFS.thrift  License.thrift  ShareMgnt.thrift  ShareSite.thrift  go-thrift  remote.thrift  setup.py  setup_py3.py  thrift
ThriftAPI/cpp/: CMakeLists.txt
ThriftAPI/gen_py_tmp/Deploy/: __init__.py  constants.py  ncTDeployAgent-remote  ncTDeployAgent.py  ncTDeployManager-remote  ncTDeployManager.py  ttypes.py
ThriftAPI/gen_py_tmp/EACP/: __init__.py  constants.py  ncTEACP-remote  ncTEACP.py  ttypes.py
ThriftAPI/gen_py_tmp/EACPLog/: __init__.py  constants.py  ncTEACPLog-remote  ncTEACPLog.py  ttypes.py
ThriftAPI/gen_py_tmp/ECMSAgent/: __init__.py  constants.py  ncTECMSAgent-remote  ncTECMSAgent.py  ttypes.py
ThriftAPI/gen_py_tmp/ECMSManager/: __init__.py  constants.py  ncTECMSManager-remote  ncTECMSManager.py  ttypes.py
ThriftAPI/gen_py_tmp/ECMSUpgrade/: __init__.py  constants.py  ncTECMSUpgradeAgent-remote  ncTECMSUpgradeAgent.py  ncTECMSUpgradeManager-remote  ncTECMSUpgradeManager.py  ttypes.py
ThriftAPI/gen_py_tmp/ECNJY/: __init__.py  constants.py  ncTECNJY-remote  ncTECNJY.py  ttypes.py
ThriftAPI/gen_py_tmp/EFAST/: __init__.py  constants.py  ncTEFAST-remote  (+2 more)
(+90 files in other folders)
